--- a/home/user/.config/hypr/hyprpaper.conf
+++ b/home/user/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/mycros/Pictures/rainbow-cat.png
-wallpaper = ,/home/mycros/Pictures/rainbow-cat.png
+preload = ~/Pictures/rainbow-cat.png
+wallpaper = ,~/Pictures/rainbow-cat.png
