--- a/home/user/.config/hypr/hyprland.conf
+++ b/home/user/.config/hypr/hyprland.conf
@@ -22,6 +22,8 @@ monitor=,1366x768,auto,1
 exec-once = waybar & hyprpaper
 exec-once = hypridle
 exec-once = hyprctl setcursor Catppuccin-Macchiato-Lavender 24 
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = mako
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
