--- a/home/user/.config/hypr/hyprpaper.conf
+++ b/home/user/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/rainbow-cat.png
-wallpaper = ,~/Pictures/rainbow-cat.png
+preload = ~/Pictures/wallpaper1.png
+wallpaper = ,  ~/Pictures/wallpaper1.png
