--- a/home/user/.config/hypr/hyprlock.conf
+++ b/home/user/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
-    monitor = 
-    path = ~/Pictures/rainbow-cat-blur.png
+    monitor =
+    path = ~/Pictures/wallpaper2.png
 }
 
 input-field {
@@ -11,8 +11,8 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(FFFFFF)
+    outer_color = rgb(8aadf4)
+    inner_color = rgba(245, 169, 127,0.6)
     font_color = rgb(10, 10, 10)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
@@ -28,18 +28,18 @@ input-field {
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
-    position = 0, -20
+    position = 0, 60
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
     monitor =
     text = cmd[update:1000] echo "$TIME"
-    color = rgba(147, 154, 183, 1.0)
-    font_size = 70
-    font_family = JetBrains Mono Nerd Font Bold
-    position = 0, -90
+    color = rgba(125, 196, 228,0.7)
+    font_size = 200
+    font_family = Font Awesome 6 Brands
+    position = 0, -100
     halign = center
     valign = top
     shadow_passes = 5
@@ -49,28 +49,23 @@ label {
 label {
     monitor =
     text = $USER
-    color = rgba(91, 96, 120, 1.0)
+    color = rgb(ee99a0)
     font_size = 20
     font_family = Fira Semibold
-    position = 0, 40
+    position = 0, 15
     halign = center
     valign = bottom
     shadow_passes = 5
     shadow_size = 10
 }
 
-image {
+label {
     monitor =
-    path = $HOME/.cache/square_wallpaper.png
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 4
-    border_color = rgb(221, 221, 221)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 200
-    halign = center
-    valign = center
+    text = cmd[update:1000] echo -e "$(~/.config/hypr/infonlock.sh)"
+    color = rgba(138, 173, 244,0.7)
+    font_size = 25
+    font_family = JetBrains Mono Nerd Font Mono ExtraBold
+    position = 0, 0
+    halign = right
+    valign = bottom
 }
-
